@@ -53,6 +53,9 @@ Bindings:
 * .net
 * java
 
+20140905
+* updated libfwsi version check
+
 20140831
 * bug fix in Python-bindings
 
